--- a/CS12/public/data_style.css
+++ b/CS12/public/data_style.css
@@ -1,8 +1,8 @@
 body {
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     margin: 0;
     background-image: linear-gradient(#C49090, #8A2D3B);
     overflow: hidden;
@@ -10,90 +10,80 @@ body {
 }
 
 fieldset {
-    border: 4px, solid, #BE5B50;
-    border-radius: 2rem;
-    padding: 2rem;
-    width: 22vw;
-    height: 74vh;
-
+    width: 800px;
+    height: 450px;
+    border: 3px solid #BE5B50;
+    border-radius: 8px;
     background-color: #641B2E;
-
-    min-width: 360px;
-    min-height: 550px;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    
 }
 
-.main {
-    width: 100%;
-    font-size: 1.05rem;
-    font-family: "Libre Baskerville", serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-
+.scroll{
+    max-height: 100%;
+    overflow-y: scroll;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    overflow-x: hidden;
 }
 
 legend {
-    font-size: 1.1rem;
-    color:#FBDB93;
+    border: 3px solid #BE5B50;
+    border-radius: 8px;
+    font-size: 1.2em;
+    padding: 5px;
     font-family: "Libre Baskerville", serif;
     font-optical-sizing: auto;
     font-weight: 700;
     font-style: normal;
     background-color: #641B2E;
-    border: 4px, solid, #BE5B50;
-    border-radius: 0.9rem;
-    padding: 0.3em;
-    
-}
-
-.input_field {
-    width: 100%;
-    padding: 1rem;
-    margin-bottom: 1.4rem;
-    box-sizing: border-box;
-    border: 0.2rem solid #BE5B50;
-    background-color: #F0E5D7;
-    border-radius: 2rem;
-
-}
-
-.button-container {
-    display: flex;
-    justify-content: center;
-}
-
-.submit {
-    width: 10rem;
-    align-self: center;
-    border: 0.2em, solid, #BE5B50;
-    border-radius: 0.5rem;
-    background-color: #641B2E;
     color: #FBDB93;
-    display: block;
-    margin: auto;
-    font-size: 1rem;
+}
+
+table {
+    border-collapse: collapse;
+    text-align: left;
+    font-size: 0.85em;
+    background-color: #FBDB93;
     font-family: "Libre Baskerville", serif;
     font-optical-sizing: auto;
-    font-weight: 400;
+    font-weight: 700;
     font-style: normal;
+    color: #641B2E;
 }
 
-.submit:hover, .button:hover {
-    transform: scale(1.2);
+.head {    
+    padding-top: 8px;
+    padding-bottom: 8px;
+    position: sticky;
+    top: 0;
+    font-size: 1.2em;
+    background-color: #BE5B50;
+    color: #FBDB93;
 }
 
-.input_field:hover {
-    transform: scale(1.02);
+th, td{
+    padding: 5px;
 }
 
-.text {
-    color: #CE8D5A;
+tbody tr:nth-of-type(even) {
+    background-color: #F0E5D7;
+}
+
+
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: #BE5B50; 
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+::-webkit-scrollbar-thumb {
+  background: #FBDB93; 
+    border-radius: 20px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #F0E5D7; 
 }
 
 body::before,
